name:                mockio-log

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.2.0
synopsis:            Combined Mock IO actions with logging
description:         Combined Mock IO actions with logging
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MockIO.IOClass
                    , MockIO.Log, MockIO.T.Log
                    , MockIO.MockIOClass
                    , MockIO.RenderDoMock

  other-modules:
  default-extensions: NoImplicitPrelude
  build-depends:      base, base-unicode-symbols, containers, data-default
                    , data-textual, lens, logging-effect, mtl, parsec
                    , prettyprinter, prettyprinter-ansi-terminal, tasty
                    , tasty-hunit, text, text-printer, time

                    , log-plus     >= 0.0.2.1
                    , mockio       >= 0.0.3.0
                    , monadio-plus >= 1.3.2.0
                    , more-unicode >= 0.0.13.0
                    , parsec-plus  >= 1.1.0.0
                    , parser-plus  >= 1.0.3.0
                    , tasty-plus   >= 1.4.0.0
                    , tfmt         >= 0.2.3.0
  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite mockio-log-test
  default-extensions: NoImplicitPrelude
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            mockio-log-test.hs
  build-depends:      base, mockio-log, tasty
  default-language:   Haskell2010

-------------------------------------------------------------------------------
