name:                mockio-log

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.3.1
synopsis:            Combined Mock IO actions with logging
description:         Combined Mock IO actions with logging
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MockIO.IOClass
                    , MockIO.Log, MockIO.T.Log
                    , MockIO.Log.MonadReader
                    , MockIO.MockIOClass
                    , MockIO.RenderDoMock

  other-modules:
  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , FlexibleContexts
                    , ImportQualifiedPost
                    , InstanceSigs
                    , LambdaCase
                    , MonadComprehensions
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RankNTypes
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      base, base-unicode-symbols, containers, data-default
                    , data-textual, deepseq, exceptions, lens, logging-effect
                    , mtl, parsec, prettyprinter, prettyprinter-ansi-terminal
                    , tasty, tasty-hunit, text, text-printer, time

                    , base1t          >= 0.0.6.0
                    , containers-plus >= 0.0.10.40
                    , log-plus        >= 0.0.4.4
                    , mockio          >= 0.0.6.0
                    , monaderror-io   >= 1.2.6.0
                    , monadio-plus    >= 2.5.3.0
                    , more-unicode    >= 0.0.19.0
                    , parsec-plus     >= 1.1.1.44
                    , parser-plus     >= 1.0.7.29
                    , tasty-plus      >= 1.5.2.24
                    , tfmt            >= 0.2.8.0

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite mockio-log-test
  default-extensions: NoImplicitPrelude
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            mockio-log-test.hs
  build-depends:      base, mockio-log, tasty
  default-language:   Haskell2010

-------------------------------------------------------------------------------
